--- a/string/1.html
+++ b/string/1.html
@@ -5,7 +5,8 @@
     <title>string</title>
 </head>
 <body>
-<h1>从字符串中获取单个字符</h1>
+<b id="page">love is everywhere. We have love from our parents and friends, which makes us become stronger. Without love, we can’t
+    survive long, or we will just like the walking dead.</b></p>
 <script src="1.js"></script>
 </body>
 </html>
